@@ -2,12 +2,16 @@ NAME
     marc-list - Script to get MARC field/subfield unique list.
 
 SYNOPSIS
-     marc-list [-h] [--version] marc_xml_file field [subfield]
+     marc-list [-f] [-h] [--version] marc_xml_file field [subfield]
 
 DESCRIPTION
     It supports MARC XML files now.
 
 ARGUMENTS
+    *       "-f"
+
+            Print frequency.
+
     *       "-h"
 
             Print help.
