@@ -1,4 +1,5 @@
 0.05
+ - Add -f option to print frequency.
  - Improve doc in marc-list.
 
 0.04 2025-01-27T21:12:34+01:00
